added graduation information to index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         Steward Observatory</a> @ University of Arizona<br>
             
                 2019 - 2022: <a class="leg" href="https://ciera.northwestern.edu/" target="_blank">
-                        CIERA</a> @ Northwestern University<br>
+                        CIERA</a> @ Northwestern University; B.A. Physics w/ Honors, 2022<br>
             </p>
         </section> 
 
