removed about me section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="element">
             <img src="images/avatar3.jpg" alt="Profile photo">  
             
-            <p class="intro" style="font-weight: bolder; font-style:italic;"> theoretical/computational astrophysicist studying compact objects</p>
+            <p class="intro" style="font-weight: bolder; font-style:italic;"> 2nd year PhD in theoretical/computational astrophysics studying compact objects</p>
             <p class="intro">
                 2022 - present: 
                 <a class="body" href="https://www.as.arizona.edu/" target="_blank">
@@ -53,14 +53,6 @@
 
                 Linkedin: <a href="https://www.linkedin.com/in/vikrammanikantan" title="linkedin"  target="_blank">in/vikrammanikantan</a>
 
-            </p>
-        </section>
-
-        <section class="element">
-            <h2>about me</h2>
-            <p>
-                I am currently a first year student in the astronomy and astrophysics PhD program at Steward Observatory,
-                at the University of Arizona.
             </p>
         </section>
 
