added to academic history

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p class="intro">
                 2022 - present: 
                 <a class="body" href="https://www.as.arizona.edu/" target="_blank">
-                        Steward Observatory</a> @ University of Arizona<br>
+                        Steward Observatory</a> @ University of Arizona; Ph.D. in Astronomy and Astrophysics<br>
             
                 2019 - 2022: <a class="leg" href="https://ciera.northwestern.edu/" target="_blank">
                         CIERA</a> @ Northwestern University; B.A. Physics w/ Honors, 2022<br>
