new, first edits

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
+
+
 <html lang="en-US">
 	<div class="main">
-		
 
         <section class="element">
-            <img src="images/avatar2.jpg" alt="Profile photo">  
+            <img src="images/profile.jpg" alt="Profile photo">  
             <p class="intro" style="font-weight: bolder; font-style:italic;"> 2nd year PhD in theoretical/computational astrophysics studying compact objects</p>
         </section> 
     </div>
