renamed photos; small cosmetic changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">		
         
         <title>Vikram Manikantan</title>
-        <link rel="icon" type="image/x-icon" href="images/favicon_ 2.png" style="height: 50;width: 50;aspect-ratio: 1;">
+        <link rel="icon" type="image/x-icon" href="images/favicon2.png" style="height: 50;width: 50;aspect-ratio: 1;">
         <link rel="stylesheet" href="assets/css/main.css" />
 
     </head>
@@ -15,7 +15,7 @@
         <div class="navbar" id="navbar"> 
 
             <!-- <span class="blinking-cursor" style="margin-left: -10px;">.</span> -->
-            <a href="index.html"> <img src="images/favicon_ 2.png"  style="width: 50px;"> </a>
+            <a href="index.html"> <img src="images/favicon2.png"  style="width: 50px;"> </a>
             <a href="research.html">research</a> 
             <a href="outreach.html">outreach</a> 
             <a href="music.html">music</a> 
@@ -25,10 +25,10 @@
         <div class="main">
 
             <!-- first row, name and photo -->
-            <div class="row" id="landing" style=" height:100vh; width:100%;  grid-row-start: 1; grid-row-end: 1; justify-content: flex-start; padding-top: 30px; padding-bottom: 100px; align-items: center;">
+            <div class="row" id="landing" style=" height:100vh; width:100%;  grid-row-start: 1; grid-row-end: 1; justify-content: flex-start; padding-top: 0px; padding-bottom: 0px; align-items: center;">
 
                 <div style="width: 40%; align-self:center; justify-self: flex-start;">
-                    <img src="images/favicon_ 2.png" height="200px">
+                    <img src="images/favicon2.png" height="200px">
 
                     <p style="font-size:xxx-large; font-weight: 900; font-style:italic; font-family: hershey-heavy; line-height: 100%;"> Vikram Manikantan</p>
 
@@ -36,8 +36,8 @@
                 </div>
 
                 <div style="width: 40%; height: 80%;">
-                    <div style="width: 230px; height: 80%; transform: skewX(-10deg); overflow:hidden; float: right;">
-                        <img src="images/profile.jpg" style="object-fit: cover; width: 140%; height: 100%; transform:skewX(10deg) translateX(-13%);">
+                    <div style="width: 230px; height: 80%; transform: skewX(-12deg); overflow:hidden; float: right;">
+                        <img src="images/profile.jpg" style="object-fit: cover; width: 160%; height: 100%; transform:skewX(12deg) translateX(-17%);">
                     </div>
                 </div>
 
