--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">		
         
         <title>Vikram Manikantan</title>
-        <link rel="icon" type="image/x-icon" href="images/favicon2.png" style="height: 50;width: 50;aspect-ratio: 1;">
+        <link rel="icon" type="image/x-icon" href="images/favicon.png" style="height: 50;width: 50;aspect-ratio: 1;">
         <link rel="stylesheet" href="assets/css/main.css" />
 
     </head>
@@ -15,7 +15,7 @@
         <div class="navbar" id="navbar"> 
 
             <!-- <span class="blinking-cursor" style="margin-left: -10px;">.</span> -->
-            <a href="index.html"> <img src="images/favicon2.png"  style="width: 50px;"> </a>
+            <a href="index.html"> <img src="images/favicon.png"  style="width: 50px;"> </a>
             <a href="research.html">research</a> 
             <a href="outreach.html">outreach</a> 
             <a href="music.html">music</a> 
@@ -27,15 +27,15 @@
             <!-- first row, name and photo -->
             <div class="row" id="landing" style=" height:100vh; width:100%;  grid-row-start: 1; grid-row-end: 1; justify-content: flex-start; padding-top: 0px; padding-bottom: 0px; align-items: center;">
 
-                <div style="width: 40%; align-self:center; justify-self: flex-start;">
-                    <img src="images/favicon2.png" height="200px">
+                <div style="width: 60%; align-self:center; justify-self: flex-start;">
+                    <img src="images/favicon.png" style="height:100px;">
 
-                    <p style="font-size:xxx-large; font-weight: 900; font-style:italic; font-family: hershey-heavy; line-height: 100%;"> Vikram Manikantan</p>
+                    <p style="font-size:40px; font-weight: 900; font-style:italic; line-height: 100%;"> Vikram Manikantan</p>
 
                     <p style="font-size: 20px; font-weight: normal; margin-top: 5%; font-style:normal; line-height: 100%;"> computational astrophysicist</p>
                 </div>
 
-                <div style="width: 40%; height: 80%;">
+                <div style="width: 18%; height: 80%;">
                     <div style="width: 230px; height: 80%; transform: skewX(-12deg); overflow:hidden; float: right;">
                         <img src="images/profile.jpg" style="object-fit: cover; width: 160%; height: 100%; transform:skewX(12deg) translateX(-17%);">
                     </div>
@@ -44,19 +44,25 @@
             </div>
 
             <!-- second row,  -->
-            <div class="row" style="height: 100%;  grid-row-start: 2; grid-row-end: 2; padding: 0px; justify-content: center; overflow: hidden;">
-                <img src="images/sim_image.png" width="100%">
+            <div class="row" style="grid-row-start: 2; grid-row-end: 2; padding: 0px; justify-content: left; overflow: hidden;">
+                <div>
+                    <h1> about me </h1>
+                </div>
             </div>
 
 
             <!-- third row, -->
-            <div class="row" style="height: 300px;  grid-row-start: 3; grid-row-end: 3;">
-                this is the third row in my grid
+            <div class="row" style="grid-row-start: 3; grid-row-end: 3;">
+                <div>
+                    <h1> research </h1>
+                </div>
             </div>
 
             <!-- fourth row, -->
-            <div class="row" style="height: 300px;  grid-row-start:auto; grid-row-end: auto;">
-                this is the fourth row in my grid
+            <div class="row" style="grid-row-start:auto; grid-row-end: auto;">
+                <div>
+                    <h1> outreach </h1>
+                </div>
             </div>
         </div>
 
