added embedded twitter feed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
 
-                <div style="width: 80vw; min-height: 50px; max-height: 5vh; justify-content: center; align-items: center; text-align: center;"> 
+                <div style="width: 70vw; min-height: 50px; max-height: 5vh; justify-content: center; align-items: center; text-align: center;"> 
                     <a href="#aboutme">
                         <span class="blinking-cursor" style="font-size: 200%; font-weight: 600; line-height: 1px; font-stretch:ultra-condensed;"> 
                             &#9073
@@ -60,7 +60,7 @@
                     <h1 style="filter: invert(1);"> about me </h1>
                 </div>
 
-                <div style="width: 80vw; min-height: 50px; max-height: 5vh; align-self: flex-end; text-align: center;"> 
+                <div style="width: 70vw; min-height: 50px; max-height: 5vh; align-self: flex-end; text-align: center;"> 
                     <a href="#research">
                         <span class="blinking-cursor" style="font-size: 200%; font-weight: 700; line-height: 1px; filter: invert(1);"> 
                             &#9073
@@ -74,13 +74,13 @@
             
 
             <!-- third row, -->
-            <div class="row break" id="research" style="background-color: #fff;"></div>
+            <div class="row break" id="research" style="background-color: var(--base3);"></div>
             <div class="row black" id="research2">
                 <div>
                     <h1> research </h1>
                 </div>
 
-                <div style="width: 80vw; min-height: 50px; max-height: 5vh; align-self: flex-end; text-align: center;"> 
+                <div style="width: 70vw; min-height: 50px; max-height: 5vh; align-self: flex-end; text-align: center;"> 
                     <a href="#outreach">
                         <span class="blinking-cursor" style="font-size: 200%; font-weight: 700; line-height: 1px; filter: invert(0);"> 
                             &#9073
@@ -90,13 +90,13 @@
             </div>
 
             <!-- fourth row, -->
-            <div class="row break" id="outreach" style="background-color: #000;"></div>
+            <div class="row break" id="outreach"></div>
             <div class="row white" id="outreach2">
                 <div>
                     <h1 style="filter: invert(1);"> outreach </h1>
                 </div>
 
-                <div style="width: 80vw; min-height: 50px; max-height: 5vh; align-self: flex-end; text-align: center;"> 
+                <div style="width: 70vw; min-height: 50px; max-height: 5vh; align-self: flex-end; text-align: center;"> 
                     <a href="#music">
                         <span class="blinking-cursor" style="font-size: 200%; font-weight: 700; line-height: 1px; filter: invert(1);"> 
                             &#9073
@@ -109,7 +109,7 @@
             <div class="row right">  </div>
 
             <!-- fifth row, -->
-            <div class="row break" id="music" style="background-color: #fff;"></div>
+            <div class="row break" id="music" style="background-color: var(--base3);"></div>
             <div class="row black" id="music">
                 <div>
                     <h1> music </h1>
@@ -119,7 +119,7 @@
                     </p>
                 </div>
 
-                <div style="width: 80vw; min-height: 50px; max-height: 5vh; align-self: flex-end; text-align: center;"> 
+                <div style="width: 70vw; min-height: 50px; max-height: 5vh; align-self: flex-end; text-align: center;"> 
                     <a href="#contact">
                         <span class="blinking-cursor" style="font-size: 200%; font-weight: 700; line-height: 1px; filter: invert(0);"> 
                             &#9073
@@ -128,16 +128,23 @@
                 </div>
             </div>
 
-            <div class="row break" id="contact" style="background-color: #000;"></div>
+            <div class="row break" id="contact"></div>
             <div class="row white" id="contact">
-                <div>
-                    <h1 style="filter: invert(1);"> contact </h1>
+                <div style="width: 70vw; text-align: left;">
+                    <h1 style="filter: invert(1); text-align: left;"> contact </h1>
+                </div>
+                
+                <div style="width: 35vw;">
                     <p style="color: #000;">
                         Email me: <a href="mailto:vik@arizona.edu" title="E-mail">vik@arizona.edu</a> <br>
                         Github: <a href="https://www.github.com/vikrammanikantan" title="github"  target="_blank">vikrammanikantan</a><br>
                         Twitter: <a href="https://www.twitter.com/astro_vik" title="twitter"  target="_blank">@astro_vik</a><br>
                         Linkedin: <a href="https://www.linkedin.com/in/vikrammanikantan" title="linkedin"  target="_blank">in/vikrammanikantan</a>
                     </p>
+                </div>
+
+                <div style="width: 35vw; align-self: center; float: center; max-height: 100vh;">
+                    <a class="twitter-timeline" data-width="400" data-height="600" data-theme="light" href="https://twitter.com/astro_vik?ref_src=twsrc%5Etfw">Tweets by astro_vik</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
 
