edited publication box size

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 
                 <div class="box" style="text-align: center; width: 80%; margin-top: 20px;">
                     <p style="padding: 15px;">
-                        I am a <mark>computational astrophysicist</mark> and PhD student at Steward Observatory, at the University of Arizona. I study the <mark>multi-messenger</mark> nature of <mark>compact objects</mark> such as binary black holes, neutron stars, supernovae, and other high-energy transients, using <mark>numerical tools</mark> such as Einstein Toolkit, IllinoisGRMHD, and Athena++.
+                        I am a <mark>computational astrophysicist</mark> and PhD student at Steward Observatory, at the University of Arizona. I study the <mark>multi-messenger</mark> nature of <mark>compact objects</mark> such as binary black holes, neutron stars, supernovae, and other high-energy transients, using <mark>numerical tools</mark> such as IllinoisGRMHD, H-AMR, and Athena++.
                     </p>
                 </div>
 
