--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="row break" id="aboutme"></div>
             <div class="row black" id="aboutme2" style="justify-content: center; min-height: 90vh; padding-top: 10px; grid-column-start: 1; grid-column-end: 3; width: 100vw; z-index: 3; overflow:visible;">
                 
-                <div class="box" style="text-align: center; width: 80%; margin-top: 30px;">
+                <div class="box" style="text-align: center; width: 80%; margin-top: 20px;">
                     <p style="padding: 10px;">
                         I am a <mark>computational astrophysicist</mark> and PhD student at Steward Observatory, at the University of Arizona. I study the <mark>multi-messenger</mark> nature of <mark>compact objects</mark> such as binary black holes, neutron stars, supernovae, and other high-energy transients, using <mark>numerical tools</mark> such as IllinoisGRMHD, H-AMR, and Athena++.
                     </p>
@@ -102,7 +102,7 @@
 
                 <div class="pub">
                     <p>
-                        [In prep] <mark> Manikantan V.</mark>, <a href="https://www.as.arizona.edu/people/faculty/vasileios-paschalidis">Paschalidis V.</a>, <a href="https://sbozzolo.github.io/">Bozzola G.</a>, 2024. <i style="font-style: italic;">Large Separation Black Hole Binary Accretion.</i>
+                        [In prep] <mark> Manikantan V.</mark>, <a href="https://www.as.arizona.edu/people/faculty/vasileios-paschalidis">Paschalidis V.</a>, <a href="https://sbozzolo.github.io/">Bozzola G.</a>, 2024. <i style="font-style: italic;">Accretion onto a Black Hole Binary with Large Separation</i>
                     </p>
                 </div>
 
