max-width fix, again

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <div class="row break" id="aboutme" style="height: 5px;"></div>
             <div class="row black" id="aboutme2" style="justify-content: center; min-height: 90vh; padding-top: 10px; grid-column-start: 1; grid-column-end: 3; width: 100vw; z-index: 3; overflow:visible;">
                 
-                <div class="box" style="text-align: center; width: 80%; margin-top: 20px;">
-                    <p style="padding: 10px;">
+                <div class="box" style="text-align: center; width: 80%; margin-top: 20px; max-width: 90vw;">
+                    <p style="padding: 10px; max-width: 90vw;">
                         I am a <mark>computational astrophysicist</mark> and PhD student at Steward Observatory, at the University of Arizona. I study the <mark>multi-messenger</mark> nature of <mark>compact objects</mark> such as binary black holes, neutron stars, supernovae, and other high-energy transients, using <mark>numerical tools</mark> such as IllinoisGRMHD, H-AMR, and Athena++.
                     </p>
                 </div>
