--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="main">
 
             <!-- first row: LANDING PAGE -->
-            <div class="row black" class="landing" style="margin-top: 100px;">
+            <div class="row black landing">
                 <div style="min-width: 400px; width: 55%;">
                     <img src="images/favicon.png" class="logo">
 
@@ -46,7 +46,7 @@
                 </div>
         
                 <!-- down arrow -->
-                <div style="width: 100%; min-width: 0; max-width: 100vw; height: 40px; justify-content: center; text-align:center; margin-top: 80px;align-self: flex-end; z-index: 10;"> 
+                <div style="width: 100%; min-width: 0; max-width: 100vw; height: 40px; justify-content: center; text-align:center; z-index: 10; margin-top: 100px;"> 
                     <a href="#aboutme" target="_self" style="text-decoration: none;">
                         <span class="blinking-cursor" style="font-size: 400%; font-weight: 600; line-height: 1px; font-stretch:ultra-condensed;"> 
                             &#9013
@@ -58,9 +58,9 @@
 
             <!-- second row: about me + image -->
             <div class="row break" id="aboutme" style="height: 5px;"></div>
-            <div class="row black" id="aboutme2" style="justify-content: center; min-height: 90vh; padding-top: 10px; grid-column-start: 1; grid-column-end: 3; width: 100vw; z-index: 3; overflow:visible;">
+            <div class="row black" id="aboutme2" style="justify-content: center; min-height: 100vh; padding-top: 10px; grid-column-start: 1; grid-column-end: 3; width: 100vw; z-index: 3; overflow:visible;">
                 
-                <div class="box" style="text-align: center; width: 80%; margin-top: 20px; max-width: 90vw;">
+                <div class="box" style="text-align: center; width: 800px; margin-top: 5vh; max-width: 90vw;">
                     <p style="padding: 10px; max-width: 90vw;">
                         I am a <mark>computational astrophysicist</mark> and PhD student at Steward Observatory, at the University of Arizona. I study the <mark>multi-messenger</mark> nature of <mark>compact objects</mark> such as binary black holes, neutron stars, supernovae, and other high-energy transients, using <mark>numerical tools</mark> such as IllinoisGRMHD, H-AMR, and Athena++.
                     </p>
