removed paper names for in prep

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                 
                 <div class="pub">
                     <p>
-                        [In prep] <mark> Manikantan V.</mark>, <a href="https://www.as.arizona.edu/people/faculty/vasileios-paschalidis">Paschalidis V.</a>, <a href="https://sbozzolo.github.io/">Bozzola G.</a>, 2024. <i style="font-style: italic;">Eccentric Black Hole Binary Accretion.</i>
+                        [In prep] <mark> Manikantan V.</mark>, <a href="https://www.as.arizona.edu/people/faculty/vasileios-paschalidis">Paschalidis V.</a>, <a href="https://sbozzolo.github.io/">Bozzola G.</a>, 2024. <i style="font-style: italic;">Black Hole Binary Accretion 1.</i>
                     </p>
                 </div>
 
                 <div class="pub">
                     <p>
-                        [In prep] <mark> Manikantan V.</mark>, <a href="https://www.as.arizona.edu/people/faculty/vasileios-paschalidis">Paschalidis V.</a>, <a href="https://sbozzolo.github.io/">Bozzola G.</a>, 2024. <i style="font-style: italic;">Accretion onto a Black Hole Binary with Large Separation</i>
+                        [In prep] <mark> Manikantan V.</mark>, <a href="https://www.as.arizona.edu/people/faculty/vasileios-paschalidis">Paschalidis V.</a>, <a href="https://sbozzolo.github.io/">Bozzola G.</a>, 2024. <i style="font-style: italic;">Black Hole Binary Accretion 2</i>
                     </p>
                 </div>
 
