changed to 3rd person *shrug*

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 
                 <div class="box">
                     <p style="padding: 10px; max-width: 90vw; line-height: 150%;">
-                        I am a <mark>computational astrophysicist</mark> and PhD student at Steward Observatory, at the University of Arizona. I study the <mark>multi-messenger</mark> nature of <mark>compact objects</mark> such as binary black holes, neutron stars, supernovae, and other high-energy transients, using <mark>numerical tools</mark> such as IllinoisGRMHD, H-AMR, and Athena++.
+                        Vikram is a <mark>computational astrophysicist</mark> and PhD student at Steward Observatory, at the University of Arizona. He studies the <mark>multi-messenger</mark> nature of <mark>compact objects</mark> such as binary black holes, neutron stars, supernovae, and other high-energy transients, using <mark>numerical tools</mark> such as IllinoisGRMHD, H-AMR, and Athena++.
                     </p>
                 </div>
 
