updated outreach, realigned some text, removed logo in landing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">		
         
         <title>Vikram Manikantan</title>
-        <link rel="icon" type="image/x-icon" href="images/favicon.png" style="height: 50;width: 50;aspect-ratio: 1;">
+        <link rel="icon" type="image/x-icon" href="images/favicon.png" style="height: 50; width: 50; aspect-ratio: 1;">
         <link rel="stylesheet" href="assets/css/main.css" />
         <base target="_blank">
 
@@ -14,9 +14,12 @@
     <body id="top">
 
         <div class="navbar" id="navbar"> 
-            <a href="#top" class="active" target="_self"> <img src="images/favicon.png"  style="width: 50px;"> </a>
+            <a href="#top" class="active" target="_self"> 
+                <img src="images/favicon.png"  style="width: 50px;"> 
+            </a>
 
-            <a href="#aboutme" target="_self">research</a> 
+            <!-- <a href="#aboutme" target="_self">about me</a>  -->
+            <a href="#research" target="_self">research</a> 
             <a href="#outreach" target="_self">outreach</a> 
             <a href="#music" target="_self">music</a> 
             <a href="#contact" target="_self">contact</a> 
@@ -28,7 +31,7 @@
             <!-- first row: LANDING PAGE -->
             <div class="row black landing">
                 <div style="min-width: 400px; width: 55%;">
-                    <img src="images/favicon.png" class="logo">
+                    <!-- <img src="images/favicon.png" class="logo"> -->
 
                     <p class="name">Vikram Manikantan</p>
 
@@ -84,12 +87,12 @@
             <div class="row break" id="research"></div>
             <div class="row white" id="research2" style="height: auto;">
                 <div class="header">
-                    <h1 style="background-color: var(--base03); color: var(--base3);"> projects </h1>
+                    <h1 style="background-color: var(--base03); color: var(--base3);"> research </h1>
                 </div>
 
                 <div class="pub">
                     <p>
-                        <mark> Manikantan V.</mark>, <a href="https://ciera.northwestern.edu/directory/nicholas-omahen/">Kaaz N.</a>, <a href="https://ciera.northwestern.edu/directory/jonatan-jacquemin-ide/">Jacquemin-Ide J.</a>, <a href="https://www.uva.nl/en/profile/m/u/g.musoke/g.musoke.html?cb">Musoke G.</a>, <a href="https://koushikchatterjeeastro.wordpress.com/"> Chatterjee K.</a>, <a href="https://www.matthewliska.com/"> Liska M.</a>, <a href="https://ciera.northwestern.edu/directory/sasha-tchekhovskoy/">Tchekhovskoy A.</a>, 2023. <i style="font-style: italic;">Winds and Disk Turbulence Exert Equal Torques on Thick Magnetically Arrested Disks</i>, arXiv, <a href="https://www.arxiv.org/abs/2310.11490" target="_blank" style="text-decoration: underline;">arxiv.org/abs/2310.11490</a>. Submitted to ApJ.
+                        <mark> Manikantan V.</mark>, <a href="https://ciera.northwestern.edu/directory/nicholas-omahen/">Kaaz N.</a>, <a href="https://ciera.northwestern.edu/directory/jonatan-jacquemin-ide/">Jacquemin-Ide J.</a>, <a href="https://www.uva.nl/en/profile/m/u/g.musoke/g.musoke.html?cb">Musoke G.</a>, <a href="https://koushikchatterjeeastro.wordpress.com/"> Chatterjee K.</a>, <a href="https://www.matthewliska.com/"> Liska M.</a>, <a href="https://ciera.northwestern.edu/directory/sasha-tchekhovskoy/">Tchekhovskoy A.</a>, 2023. <i style="font-style: italic;">Winds and Disk Turbulence Exert Equal Torques on Thick Magnetically Arrested Disks</i>, arXiv, <a href="https://www.arxiv.org/abs/2310.11490" target="_blank" style="text-decoration: underline;">arxiv.org/abs/2310.11490</a>. Accepted to ApJ.
                     </p>
                 </div>
                 
@@ -118,7 +121,7 @@
                 </div>
 
                 <div class="outreach">
-                    <h2><a href="https://timestep.arizona.edu/" target="_blank">TIMESTEP</a></h2>
+                    <h2><a href="https://timestep.arizona.edu/" target="_blank">TIMESTEP Research</a></h2>
                     <p><mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program, a mentorship program supporting second-year undergraduates from minoritized backgrounds entering astrophysics research.</p>
                 </div>
 
@@ -130,6 +133,11 @@
                 <div class="outreach">
                     <h2><a>Steward Social Media</a></h2>
                     <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our Instagram, Twitter, and Facebook accounts, as well as developing content to post three times a week.</p>
+                </div>
+
+                <div class="outreach">
+                    <h2><a href="https://timestep.arizona.edu/programs/timestep-summer-tech-internship" target="_blank">TIMESTEP Internship</a></h2>
+                    <p><mark>Graduate Student Coordinator</mark> of the Summer Tech Internship program, a mentorship program supporting undergraduates from minoritized backgrounds entering the STEM workforce.</p>
                 </div>
 
             </div>
