temporary spacing fix for mobile landing page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 <div style="min-width: 400px; width: 55%;">
                     <!-- <img src="images/favicon.png" class="logo"> -->
 
+
+                    <!-- Temporary fix to stop nav bar hiding name in mobile view -->
+                    <br>
+                    <br>
+
                     <p class="name">Vikram Manikantan</p>
 
                     <p class="title"> computational astrophysicist</p>
