--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!-- down arrow -->
                 <div style="width: 100%; min-width: 0; max-width: 100vw; height: 40px; justify-content: center; text-align:center; z-index: 10; margin-top: 100px;"> 
                     <a href="#aboutme" target="_self" style="text-decoration: none;">
-                        <span class="blinking-cursor" style="font-size: 400%; font-weight: 600; line-height: 1px; font-stretch:ultra-condensed;"> 
+                        <span class="blinking-cursor" style="font-size: 400%; font-weight: 900; line-height: 1px; font-stretch:ultra-condensed;"> 
                             &#9013
                         </span>
                     </a>
@@ -127,17 +127,17 @@
 
                 <div class="outreach">
                     <h2><a href="https://timestep.arizona.edu/" target="_blank">TIMESTEP Research</a></h2>
-                    <p><mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program, a mentorship program supporting second-year undergraduates from minoritized backgrounds entering astrophysics research.</p>
+                    <p><mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program, a mentorship program that supports second-year undergraduates from minoritized backgrounds with technical and professional training as they begin astrophysics research projects.</p>
                 </div>
 
                 <div class="outreach">
                     <h2><a href="https://www.github.com/vikrammanikantan/compass" target="_blank">COMPASS</a></h2>
-                    <p><mark>Co-organizer and instructor</mark> for COMPASS, a computational and mathematical workshop for incoming undergraduates that aims to remove barriers to entering STEM through technical training.</p>
+                    <p><mark>Co-organizer and instructor</mark> for COMPASS, a computational and mathematical workshop for incoming undergraduates that aims to remove barriers to entering STEM by providing necessary technical training.</p>
                 </div>
 
                 <div class="outreach">
                     <h2><a>Steward Social Media</a></h2>
-                    <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our Instagram, Twitter, and Facebook accounts, as well as developing content to post three times a week.</p>
+                    <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our Instagram, <a href="https://twitter.com/StewardAstro">Twitter</a>, and Facebook accounts, as well as developing content to post three times a week.</p>
                 </div>
 
                 <div class="outreach">
