--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 <div class="pub">
                     <p>
-                        <mark> Manikantan V.</mark>, <a href="https://ciera.northwestern.edu/directory/nicholas-omahen/">Kaaz N.</a>, <a href="https://ciera.northwestern.edu/directory/jonatan-jacquemin-ide/">Jacquemin-Ide J.</a>, <a href="https://www.uva.nl/en/profile/m/u/g.musoke/g.musoke.html?cb">Musoke G.</a>, <a href="https://koushikchatterjeeastro.wordpress.com/"> Chatterjee K.</a>, <a href="https://www.matthewliska.com/"> Liska M.</a>, <a href="https://ciera.northwestern.edu/directory/sasha-tchekhovskoy/">Tchekhovskoy A.</a>, 2023. <i style="font-style: italic;">Winds and Disk Turbulence Exert Equal Torques on Magnetically Arrested Disks, ApJ, 965, 175, doi: <a href="http://doi.org/10.3847/1538-4357/ad323d">10.3847/1538-4357/ad323d</a>.
+                        <mark> Manikantan V.</mark>, <a href="https://ciera.northwestern.edu/directory/nicholas-omahen/">Kaaz N.</a>, <a href="https://ciera.northwestern.edu/directory/jonatan-jacquemin-ide/">Jacquemin-Ide J.</a>, <a href="https://www.uva.nl/en/profile/m/u/g.musoke/g.musoke.html?cb">Musoke G.</a>, <a href="https://koushikchatterjeeastro.wordpress.com/"> Chatterjee K.</a>, <a href="https://www.matthewliska.com/"> Liska M.</a>, <a href="https://ciera.northwestern.edu/directory/sasha-tchekhovskoy/">Tchekhovskoy A.</a>, 2023. <i style="font-style: italic;">Winds and Disk Turbulence Exert Equal Torques on Magnetically Arrested Disks</i>, ApJ, 965, 175, doi: <a href="http://doi.org/10.3847/1538-4357/ad323d">10.3847/1538-4357/ad323d</a>.
                     </p>
                 </div>
                 
