--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </p>
                 </div>
                 
-                <div class="pub">
+                <!-- <div class="pub">
                     <p>
                         [In prep] <mark> Manikantan V.</mark>, <a href="https://www.as.arizona.edu/people/faculty/vasileios-paschalidis">Paschalidis V.</a>, <a href="https://sbozzolo.github.io/">Bozzola G.</a>, 2024. <i style="font-style: italic;">Black Hole Binary Accretion 1.</i>
                     </p>
@@ -111,7 +111,7 @@
                     <p>
                         [In prep] <mark> Manikantan V.</mark>, <a href="https://www.as.arizona.edu/people/faculty/vasileios-paschalidis">Paschalidis V.</a>, <a href="https://sbozzolo.github.io/">Bozzola G.</a>, 2024. <i style="font-style: italic;">Black Hole Binary Accretion 2</i>
                     </p>
-                </div>
+                </div> -->
 
             </div>
 
