adjusted wording of outreach section

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                 </div>
 
                 <div class="outreach">
-                    <h2><a href="https://timestep.arizona.edu/" target="_blank">TIMESTEP Research</a></h2>
-                    <p><mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program, a mentorship program that supports second-year undergraduates from underrepresented backgrounds with technical and professional training as they begin their astrophysics research projects.</p>
+                    <h2><a href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">TIMESTEP Research</a></h2>
+                    <p><mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program; a mentorship program that provides second year undergraduates with a paid opportunity to build technical and professional skills that are transferable to both research and industry.</p>
                 </div>
 
                 <div class="outreach">
@@ -144,7 +144,7 @@
 
                 <div class="outreach">
                     <h2><a href="https://timestep.arizona.edu/programs/timestep-summer-tech-internship" target="_blank">TIMESTEP Internship</a></h2>
-                    <p><mark>Graduate Student Coordinator</mark> of the Summer Tech Internship program, a mentorship program supporting undergraduates from minoritized backgrounds entering the STEM workforce.</p>
+                    <p><mark>Graduate Student Coordinator</mark> of the Summer Tech Internship program; a mentorship program supporting undergraduates entering the STEM workforce by matching them with companies for a summer internship and providing a support structure.</p>
                 </div>
 
             </div>
