changed intro line

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <section class="element">
             <img src="images/avatar3.jpg" alt="Profile photo">  
             
-            <p class="intro" style="font-weight: bolder; font-style:italic;"> 2nd year PhD in theoretical/computational astrophysics studying compact objects</p>
+            <p class="intro" style="font-weight: bolder; font-style:italic;"> 3rd year PhD student in theoretical/computational astrophysics studying compact objects and their accretion flows</p>
             <p class="intro">
                 2022 - present: 
-                <a class="body" href="https://www.as.arizona.edu/" target="_blank">
+                <a class="body" href="https://astro.arizona.edu/" target="_blank">
                         Steward Observatory</a> @ University of Arizona; Ph.D. in Astronomy and Astrophysics<br>
             
                 2019 - 2022: <a class="leg" href="https://ciera.northwestern.edu/" target="_blank">
