--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">		
         
         <title>Vikram Manikantan</title>
-        <link rel="icon" type="image/x-icon" href="images/favicon.png" style="height: 50; width: 50; aspect-ratio: 1;">
+        <link rel="icon" type="image/x-icon" href="images/pixel.png" style="height: 50; width: 50; aspect-ratio: 1;">
         <link rel="stylesheet" href="assets/css/main.css" />
         <base target="_blank">
 
