building out body - still not close

--- a/index.html
+++ b/index.html
@@ -30,11 +30,21 @@
 
         </div>
 
+        <div class="row one" id="about">
+            <div class="content">
+                <h2>About</h2>
+
+                <p> I am a PhD student in the Department of Astronomy at the University of Arizona. </p>
+            </div>
+
+        </div>
+
         <!-- <div class="row" id="bhimage"
             style="background-image: url('images/bh_image.png');
             background-size: cover;
             background-repeat: no-repeat;
-            background-position: center;">
+            background-position: center;
+            height: 80vh;">
             eventually: 3D moving image?
         </div> -->
 
