added header image

--- a/compass.html
+++ b/compass.html
@@ -109,7 +109,7 @@
     </header>
 
     <section class="banner">
-        <img src="cosmic_cliffs.png" alt="Banner Image" style="height: 200px; width: 100%; object-fit: cover; object-position: center;">
+        <img src="images/cosmic_cliffs.png" alt="Banner Image" style="height: 200px; width: 100%; object-fit: cover; object-position: center;">
     </section>
 
     <section id="about" class="container">
